syntax = "proto3";
package user.v1;

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc List(ListRequest) returns (ListResponse); // Unary -> repeated field
  rpc Stream(StreamRequest) returns (stream User); // Server streaming
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

// Requests
message CreateRequest {
  string name = 1;
  string email = 2;
}

message GetRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message DeleteRequest {
  string id = 1;
}

message ListRequest {}
message StreamRequest {}

// Responses
message CreateResponse {
  User user = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateResponse {
  User user = 1;
}

message DeleteResponse {
  bool success = 1;
}

message ListResponse {
  repeated User users = 1;
}
